--- a/src/index.scss
+++ b/src/index.scss
@@ -21,36 +21,13 @@ transform: translate(-50%, -50%);
 box-shadow: 1px 5px 20px #f1f1f1;
 border-radius: 10px;
 border: 1px solid #f1f1f1;
-font-size: 20px;
+font-size: 16px;
 
   &__sidebar{
     background-color: #e4e3e3;
     width: 200px;
-    height: 100%;
+    height: calc(100% - 120px);
     border-right: 1px solid #f1f1f1;
     padding: 60px 20px;
-  }
-
-  .sidebar__list{
-    li{
-      display: flex;
-      align-items: center;
-      padding: 10px 12px;
-      cursor: pointer;
-      margin-bottom: 5px;
-
-      &.active{
-        background: #ffffff;
-        box-shadow: 0px 2px 10px rgba(0,0,0,0.05);
-        border-radius: 4px;
-      }
-
-
-      i{
-        display: inline-flex;
-        margin-right: 10px;
-      }
-    }
-    
   }
 }
